--- a/app/scss/sections/_merch.scss
+++ b/app/scss/sections/_merch.scss
@@ -10,7 +10,7 @@
       grid-template-columns: repeat(2, 1fr);
     }
 
-    @media (max-width: 568px) {
+    @include breakpoint(sm-tablet) {
       grid-template-columns: repeat(1, 1fr);
     }
   }
