--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -114,11 +114,11 @@
       transform: scale(0.5) translateX(-50%);
     }
 
-    @media (max-width: 568px) {
+    @include breakpoint(sm-tablet) {
       transform: scale(0.5) translateX(-50%);
     }
 
-    @media (max-width: 568px) {
+    @include breakpoint(sm-tablet) {
       top: 17rem;
       transform: scale(0.5) translateX(-50%);
     }
@@ -168,7 +168,7 @@
         max-width: 45ch;
       }
 
-      @media (max-width: 568px) {
+      @include breakpoint(sm-tablet) {
         max-width: 30ch;
       }
     }
@@ -219,7 +219,7 @@
       padding: 2rem;
     }
 
-    @media (max-width: 568px) {
+    @include breakpoint(sm-tablet) {
       padding: 4rem 2rem 6rem;
     }
   }
@@ -303,7 +303,7 @@
       top: calc(var(--scroll-position) + 300px);
     }
 
-    @media (max-width: 568px) {
+    @include breakpoint(sm-tablet) {
       top: calc(var(--scroll-position) + 330px);
     }
 
@@ -323,7 +323,7 @@
       top: calc(var(--scroll-position) - 160px);
     }
 
-    @media (max-width: 568px) {
+    @include breakpoint(sm-tablet) {
       top: calc(var(--scroll-position) - 130px);
     }
 
