--- a/app/scss/components/_nav.scss
+++ b/app/scss/components/_nav.scss
@@ -15,7 +15,7 @@
     transition: padding 150ms ease-in;
   }
 
-  @media (max-width: 568px) {
+  @include breakpoint(sm-tablet) {
     padding: 1rem;
   }
 
@@ -75,7 +75,7 @@
       backdrop-filter: blur(5px);
     }
 
-    @media (max-width: 568px) {
+    @include breakpoint(sm-tablet) {
       width: 100vw;
     }
 
@@ -274,7 +274,7 @@
     padding: 0.25rem 0.5rem;
     gap: 0.75rem;
 
-    @media (max-width: 568px) {
+    @include breakpoint(sm-tablet) {
       gap: 0.25rem;
     }
   }
@@ -285,7 +285,7 @@
     vertical-align: middle;
     color: var(--blue-900);
 
-    @media (max-width: 568px) {
+    @include breakpoint(sm-tablet) {
       font-size: 0.7rem;
     }
 
