--- a/app/scss/components/_tables.scss
+++ b/app/scss/components/_tables.scss
@@ -146,7 +146,7 @@ table {
       z-index: 999;
     }
 
-    @media (max-width: 568px) {
+    @include breakpoint(sm-tablet) {
       left: 90%;
       width: 22ch;
     }
