--- a/app/scss/sections/_team.scss
+++ b/app/scss/sections/_team.scss
@@ -164,7 +164,7 @@
     padding: 3rem;
     box-shadow: 0px 12px 24px 0px hsla(213, 95%, 19%, 0.2), 0px 16px 64px 0px hsla(213, 38%, 36%, 0.35);
 
-    @media (max-width: 568px) {
+    @include breakpoint(sm-tablet) {
       background-position: center;
       background-size: 50%;
     }
@@ -175,7 +175,7 @@
     line-height: 1.1;
     color: var(--blue-50);
 
-    @media (max-width: 568px) {
+    @include breakpoint(sm-tablet) {
       margin-bottom: -0.5rem;
       font-size: 1.953rem;
     }
@@ -193,7 +193,7 @@
     max-width: 45ch;
     color: var(--blue-50);
 
-    @media (max-width: 568px) {
+    @include breakpoint(sm-tablet) {
       max-width: max-content;
       line-height: 1.3;
       font-size: 1rem;
@@ -212,7 +212,7 @@
       grid-template-columns: repeat(2, 1fr);
     }
 
-    @media (max-width: 568px) {
+    @include breakpoint(sm-tablet) {
       grid-template-columns: repeat(1, 1fr);
     }
   }
