--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -15,7 +15,7 @@ h1 {
     font-size: 3.25rem;
   }
 
-  @media (max-width: 450px) {
+  @include breakpoint(md-mobile) {
     font-size: 2.5rem;
   }
 }
@@ -31,7 +31,7 @@ h3 {
   font-weight: 600;
   letter-spacing: -1px;
 
-  @media (max-width: 450px) {
+  @include breakpoint(md-mobile) {
     line-height: 1;
   }
 }
@@ -41,7 +41,7 @@ h4 {
   font-weight: 600;
   letter-spacing: -0.5px;
 
-  @media (max-width: 450px) {
+  @include breakpoint(md-mobile) {
     line-height: 1;
   }
 }
