--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -167,7 +167,7 @@ textarea {
       font-size: 0.8rem;
     }
 
-    @media (max-width: 450px) {
+    @include breakpoint(md-mobile) {
       font-size: 0.7rem;
       padding-left: 1.5rem;
     }
@@ -183,7 +183,7 @@ textarea {
       background-color: rgba(255, 255, 255, 0);
       border-radius: 2px;
 
-      @media (max-width: 450px) {
+      @include breakpoint(md-mobile) {
         left: 12px;
         width: 4px;
         height: 4px;
@@ -202,7 +202,7 @@ textarea {
       border: 1px solid var(--blue-gray-200);
       border-radius: 4px;
 
-      @media (max-width: 450px) {
+      @include breakpoint(md-mobile) {
         left: 9px;
         width: 10px;
         height: 10px;
