--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -281,7 +281,7 @@
       justify-content: flex-start;
     }
 
-    @media (max-width: 375px) {
+    @include breakpoint(sm-mobile) {
       margin: 0 -1rem;
       padding: 2rem 1rem;
     }
