added new topbar

--- a/app/scss/base/_fonts.scss
+++ b/app/scss/base/_fonts.scss
@@ -1,10 +1,20 @@
 @font-face {
   font-family: "Right Grotesk Wide Black";
-  src: url("../../../fonts/PPRightGrotesk-WideBlack.woff2") format("woff2"),
-    /* Super Modern Browsers */
-    url("../../../fonts/PPRightGrotesk-WideBlack.woff") format("woff"),
-    /* Pretty Modern Browsers */
-    url("../../../fonts/PPRightGrotesk-WideBlack.ttf") format("truetype");
+  src: url("../../../fonts/PPRightGrotesk-WideBlack.woff2") format("woff2"), /* Super Modern Browsers */ url("../../../fonts/PPRightGrotesk-WideBlack.woff") format("woff"), /* Pretty Modern Browsers */ url("../../../fonts/PPRightGrotesk-WideBlack.ttf") format("truetype");
+  /* Safari, Android, iOS */
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Right Grotesk Wide Fine";
+  src: url("../../../fonts/PPRightGrotesk-WideFine.woff2") format("woff2"), /* Super Modern Browsers */ url("../../../fonts/PPRightGrotesk-WideFine.woff") format("woff"), /* Pretty Modern Browsers */ url("../../../fonts/PPRightGrotesk-WideFine.ttf") format("truetype");
+  /* Safari, Android, iOS */
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Right Grotesk Wide Medium";
+  src: url("../../../fonts/PPRightGrotesk-WideMedium.woff2") format("woff2"), /* Super Modern Browsers */ url("../../../fonts/PPRightGrotesk-WideMedium.woff") format("woff"), /* Pretty Modern Browsers */ url("../../../fonts/PPRightGrotesk-WideMedium.ttf") format("truetype");
   /* Safari, Android, iOS */
   font-display: swap;
 }
