--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -1,7 +1,9 @@
 @use "../base/breakpoints" as *;
 
 :root {
-  --heading-font: "Right Grotesk Wide Black", Inter, Roboto, sans-serif;
+  --heavy-heading-font: "Right Grotesk Wide Black", Inter, Roboto, sans-serif;
+  --medium-heading-font: "Right Grotesk Wide Medium", Inter, Roboto, sans-serif;
+  --light-heading-font: "Right Grotesk Wide Fine", Inter, Roboto, sans-serif;
   --body-font: Inter, Roboto, sans-serif;
 }
 
@@ -9,7 +11,7 @@ h1 {
   font-size: 4.052rem;
   font-weight: 900;
   letter-spacing: -0.5px;
-  font-family: var(--heading-font);
+  font-family: var(--heavy-heading-font);
 
   @include breakpoint(lg-tablet) {
     font-size: 3.25rem;
