--- a/app/scss/components/_nav.scss
+++ b/app/scss/components/_nav.scss
@@ -6,6 +6,14 @@
   padding: 1.25rem 2rem;
   background: hsl(0deg 0% 100% / 10%);
 
+  @include breakpoint(sm-tablet) {
+    padding: 1rem 2rem;
+  }
+
+  @include breakpoint(sm-mobile) {
+    padding: 1rem;
+  }
+
   &__container {
     display: flex;
     align-items: center;
@@ -13,10 +21,6 @@
     max-width: 1080px;
     margin: 0 auto;
     transition: padding 150ms ease-in;
-  }
-
-  @include breakpoint(sm-tablet) {
-    padding: 1rem;
   }
 
   &__overlay {
@@ -41,13 +45,13 @@
     width: 120px;
     min-width: 120px;
 
+    @include breakpoint(lg-tablet) {
+      display: flex;
+    }
+
     svg {
       width: 120px;
       height: 40px;
-    }
-
-    @include breakpoint(lg-tablet) {
-      display: flex;
     }
   }
 
@@ -64,6 +68,7 @@
       top: 0;
       right: 0;
       flex-direction: column;
+      gap: 3rem;
       width: 50vw;
       height: 100vh;
       padding: min(30vh, 5rem) 2rem;
@@ -71,7 +76,6 @@
       pointer-events: none;
       opacity: 0;
       background-color: hsla(0, 0%, 100%, 0.98);
-      gap: 3rem;
       backdrop-filter: blur(5px);
     }
 
@@ -107,19 +111,19 @@
     background: none;
     aspect-ratio: 1;
 
+    @include breakpoint(lg-tablet) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 0.3rem;
+    }
+
     .line {
       width: 100%;
       height: 2px;
       transition: transform 500ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
       transform-origin: left;
       background-color: var(--blue-gray-400);
-    }
-
-    @include breakpoint(lg-tablet) {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      gap: 0.3rem;
     }
 
     &[aria-expanded="true"] {
@@ -167,8 +171,8 @@
     &:hover .dropdown__menu {
       display: flex;
       flex-direction: column;
-      width: max-content;
       gap: 0.5rem;
+      width: max-content;
     }
 
     &__menu {
@@ -200,10 +204,10 @@
     &__link {
       display: flex;
       align-items: center;
+      gap: 0.5rem;
       padding: 20px;
       cursor: pointer;
       border-radius: 10px;
-      gap: 0.5rem;
 
       &:hover {
         background-color: var(--blue-gray-50);
@@ -271,8 +275,8 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    padding: 0.25rem 0.5rem;
     gap: 0.75rem;
+    padding: 0.25rem 0.5rem;
 
     @include breakpoint(sm-tablet) {
       gap: 0.25rem;
