--- a/app/scss/components/_topbar.scss
+++ b/app/scss/components/_topbar.scss
@@ -1,15 +1,24 @@
 @use "../base/breakpoints" as *;
 
 .topbar {
-  background: var(--blue-500);
   padding: 0.5rem;
-  text-align: center;
+
+  background: var(--red-500);
+  svg {
+    width: 12px;
+    height: 12px;
+  }
 
   &__text {
-    font-family: var(--heading-font);
-    color: var(--blue-50);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+
+    font-family: var(--medium-heading-font);
     font-size: 0.8rem;
+    letter-spacing: 0.5px;
     text-transform: uppercase;
-    letter-spacing: 1px;
+    color: var(--red-50);
   }
 }
