--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -205,4 +205,18 @@
     transform: translateY(50%);
     background-image: url(../../../images/icons/icon_checkmark-small.svg);
   }
+
+  &__list-item--new::before {
+    position: absolute;
+    bottom: 50%;
+    left: 0;
+    width: 32px;
+    height: 32px;
+
+    content: "";
+    transform: translateY(50%);
+    background-image: url(../../../images/icons/icon_new.svg);
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
 }
