added detect location

--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -161,7 +161,7 @@ textarea {
     padding: 0.7rem 0 0.6rem 2.2rem;
     font-size: 0.8rem;
     background-color: white;
-    color: var(--blue-gray-400);
+    color: var(--blue-900);
 
     @include breakpoint(sm-tablet) {
       font-size: 0.8rem;
