--- a/app/scss/components/_nav.scss
+++ b/app/scss/components/_nav.scss
@@ -181,7 +181,7 @@
       top: 45px;
       left: 50%;
       display: none;
-      padding: 20px;
+      padding: 1rem;
       transform: translateX(-50%);
       border-radius: 10px;
       background-color: white;
@@ -204,10 +204,10 @@
     &__link {
       display: flex;
       align-items: center;
-      gap: 0.5rem;
-      padding: 20px;
+      gap: 1rem;
+      padding: 0.5rem 1rem;
       cursor: pointer;
-      border-radius: 10px;
+      border-radius: 8px;
 
       &:hover {
         background-color: var(--blue-gray-50);
