--- a/app/scss/base/_globals.scss
+++ b/app/scss/base/_globals.scss
@@ -8,7 +8,10 @@
   animation: none !important;
 }
 
-// Safari v11+ minipod fan animation fix (disables it)
+
+/* The code below disables the CSS minipod animation in Safari v11+ 
+because it causes the animation to appear janky. This is a known issue with Safari. */
+
 @media not all and (min-resolution: 0.001dpcm) {
   @supports (-webkit-appearance: none) and (stroke-color: transparent) {
     .fan-swing-base {
@@ -35,7 +38,6 @@ body {
   line-height: 1.4;
   color: var(--blue-900);
   background-color: white;
-  // overflow-x: hidden;
 }
 
 h1,
