--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -39,8 +39,9 @@ input[type="radio"] {
   }
 
   &:focus + label {
-    outline: 1px solid var(--blue-900);
-    outline-offset: -1px;
+    outline: 0 none;
+    box-shadow: inset 0 0 0 3px var(--blend-color-light), inset 0 0 0 3px var(--blue-500);
+    border-color: var(--blue-500);
   }
 }
 
@@ -71,6 +72,7 @@ select {
   padding-left: 7px;
 }
 
+// changes autofill color
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
@@ -83,16 +85,21 @@ select:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0 30px var(--blue-100) inset !important;
 }
 
+
+// changes focus color
+label:focus,
 input:focus,
 select:focus,
 textarea:focus {
-  outline: 1px solid var(--blue-900);
-  outline-offset: -1px;
+  outline: 0 none;
+  box-shadow: inset 0 0 0 3px var(--blend-color-light), inset 0 0 0 3px var(--blue-500);
+  border-color: var(--blue-500);
 }
 
 input::placeholder,
 textarea::placeholder {
-  color: #9cb2ca;
+  color: var(--blue-gray-600);
+  font-size: 0.8rem;
 }
 
 textarea {
@@ -161,7 +168,7 @@ textarea {
     padding: 0.7rem 0 0.6rem 2.2rem;
     font-size: 0.8rem;
     background-color: white;
-    color: var(--blue-900);
+    color: #000;
 
     @include breakpoint(sm-tablet) {
       font-size: 0.8rem;
