--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -108,12 +108,13 @@
     font-weight: 600;
     max-width: none;
     padding: 1rem 0;
+    background-color: var(--teal-400);
     border: none;
     border-radius: 5px;
     transition: background-color 100ms ease-in-out;
 
     &:hover {
-      background-color: var(--blue-300);
+      background-color: var(--teal-300);
     }
   }
 
