--- a/app/scss/base/_globals.scss
+++ b/app/scss/base/_globals.scss
@@ -38,6 +38,8 @@ body {
   line-height: 1.4;
   color: var(--blue-900);
   background-color: white;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
 }
 
 h1,
