--- a/app/scss/components/_nav.scss
+++ b/app/scss/components/_nav.scss
@@ -1,18 +1,12 @@
 @use "../base/breakpoints" as *;
 
 .navbar {
-  position: relative;
+  position: sticky;
+  top: 0;
   z-index: 99999;
-  padding: 1.25rem 2rem;
-  background: hsl(0deg 0% 100% / 10%);
-
-  @include breakpoint(sm-tablet) {
-    padding: 1rem 2rem;
-  }
-
-  @include breakpoint(sm-mobile) {
-    padding: 1rem;
-  }
+  background: hsl(0deg 0% 100% / 85%);
+  backdrop-filter: saturate(180%) blur(5px);
+  backface-visibility: hidden;
 
   &__container {
     display: flex;
@@ -20,7 +14,17 @@
     justify-content: space-between;
     max-width: 1080px;
     margin: 0 auto;
+    padding: 1rem 2rem;
     transition: padding 150ms ease-in;
+    box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.05);
+
+    @include breakpoint(sm-tablet) {
+      padding: 1rem 2rem;
+    }
+
+    @include breakpoint(sm-mobile) {
+      padding: 1rem;
+    }
   }
 
   &__overlay {
@@ -44,6 +48,7 @@
   &__logo {
     width: 120px;
     min-width: 120px;
+    height: 40px;
 
     @include breakpoint(lg-tablet) {
       display: flex;
@@ -274,7 +279,7 @@
 .subnav {
   position: sticky;
   z-index: 9999;
-  top: 0;
+  top: 72px;
   max-width: 100%;
   padding: 0.75rem 2rem;
   background: var(--blue-gray-50);
