--- a/app/scss/components/_nav.scss
+++ b/app/scss/components/_nav.scss
@@ -5,6 +5,7 @@
   top: 0;
   z-index: 99999;
   background: hsl(0deg 0% 100% / 85%);
+  box-shadow: inset 0 -1px 0 0 hsla(0, 0%, 0%, 0.05);
   backdrop-filter: saturate(180%) blur(5px);
   backface-visibility: hidden;
 
@@ -16,7 +17,6 @@
     margin: 0 auto;
     padding: 1rem 2rem;
     transition: padding 150ms ease-in;
-    box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.05);
 
     @include breakpoint(sm-tablet) {
       padding: 1rem 2rem;
