--- a/app/scss/components/_nav.scss
+++ b/app/scss/components/_nav.scss
@@ -151,7 +151,7 @@
       }
 
       .dropdown__chevron {
-        transform: rotate(90deg);
+        transform: rotate(-90deg);
         stroke: var(--blue-500);
       }
     }
@@ -182,6 +182,7 @@
 
     &__chevron {
       margin-left: 0.3rem;
+      transform: translateY(-1px) rotate(90deg);
       transition: transform 200ms ease-out;
       transform-origin: 25% 50%;
       stroke: var(--blue-900);
@@ -191,7 +192,7 @@
     }
 
     &:hover .dropdown__chevron {
-      transform: rotate(90deg);
+      transform: translateY(2px) rotate(-90deg);
       stroke: var(--blue-500);
     }
 
