--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -278,14 +278,18 @@
 
   &__partnership {
     background-image: url("../../../images/illustrations/bg-vosk.svg");
-    background-position: 55.5% 20%;
+    background-position: 55% 20%;
     background-repeat: no-repeat;
 
     @include breakpoint(lg-tablet) {
       background-position: 52.5% 23%;
     }
 
-    @include breakpoint(md-mobile) {
+    @include breakpoint(md-tablet) {
+      background-position: 51% 24.5%;
+    }
+
+    @include breakpoint(sm-tablet) {
       background-position: 50.5% 26%;
     }
 
