further minor changes to voskcoin page

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -19,5 +19,6 @@
 @use "sections/team";
 @use "sections/merch";
 @use "sections/faq";
+@use "sections/promotion";
 @use "utils/flex";
 @use "utils/utilities";
