--- a/app/scss/utils/_spacing.scss
+++ b/app/scss/utils/_spacing.scss
@@ -28,6 +28,10 @@
   &__promotion {
     max-width: 420px;
     margin: 0 auto;
+
+    @include breakpoint(lg-tablet) {
+      margin: auto;
+    }
   }
 }
 
