removed the copy

--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -230,6 +230,10 @@
     border-radius: 10px;
     background-color: var(--warm-gray-900);
 
+    @include breakpoint(lg-tablet) {
+      align-self: center;
+    }
+
     @include breakpoint(md-mobile) {
       flex-direction: column;
     }
