--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,18 +7,19 @@
 @use "utils/spacing";
 @use "components/buttons";
 @use "components/minipod";
-@use "components/hero";
 @use "components/nav";
 @use "components/topbar";
 @use "components/footer";
 @use "components/cards";
 @use "components/tables";
 @use "components/form";
+@use "sections/hero";
 @use "sections/home";
 @use "sections/competitors";
 @use "sections/team";
 @use "sections/merch";
 @use "sections/faq";
 @use "sections/promotion";
+@use "sections/turnkey";
 @use "utils/flex";
 @use "utils/utilities";
