--- a/app/scss/sections/_turnkey.scss
+++ b/app/scss/sections/_turnkey.scss
@@ -25,6 +25,7 @@
     }
   }
 
+  // animated stars on the background grid if the browser supports it
   @supports (offset-path: inherit) {
     .star {
       width: 40px;
@@ -84,13 +85,6 @@
       }
     }
   }
-
-  @include breakpoint(lg-tablet) {
-    .star {
-      // display: none;
-    }
-  }
-
 
   &__header {
     @include breakpoint(lg-tablet) {
@@ -162,6 +156,21 @@
     border-radius: 10px;
     background-color: var(--blue-gray-50);
     box-shadow: var(--shadow-elevation-high);
+    animation: float 5s infinite forwards;
+
+    @keyframes float {
+      0% {
+        transform: translateY(0);
+      }
+
+      50% {
+        transform: translateY(-10px);
+      }
+
+      100% {
+        transform: translateY(0);
+      }
+    }
 
     img {
       width: 60px;
@@ -238,10 +247,18 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
+      cursor: default;
       padding: 1rem;
       border: 1px solid var(--blue-gray-100);
-      border-radius: 10px;
       background-color: var(--blue-gray-50);
+      border-radius: 10px;
+      transition: all 150ms ease-out;
+
+      &:hover {
+        transform: translateY(-5px);
+        border: 1px solid var(--blue-500);
+        box-shadow: var(--shadow-elevation-high);
+      }
     }
 
     img {
@@ -262,6 +279,13 @@
     border: 1px solid var(--blue-gray-100);
     border-radius: 10px;
     background-color: var(--blue-gray-50);
+    transition: all 150ms ease-out;
+
+    &:hover {
+      transform: translateY(-5px);
+      border: 1px solid var(--blue-500);
+      box-shadow: var(--shadow-elevation-high);
+    }
 
     h5 {
       @include breakpoint(lg-tablet) {
