--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -21,5 +21,6 @@
 @use "sections/faq";
 @use "sections/promotion";
 @use "sections/turnkey";
+@use "sections/voskcoin";
 @use "utils/flex";
 @use "utils/utilities";
