--- a/app/scss/sections/_turnkey.scss
+++ b/app/scss/sections/_turnkey.scss
@@ -111,16 +111,18 @@
   }
 
   &__mining {
-    line-height: .9;
+    line-height: .85;
 
     @include breakpoint(lg-tablet) {
       text-align: center;
     }
 
     h2 {
-      font-family: var(--medium-font);
-      font-size: 2rem;
-      letter-spacing: -.5px;
+      font-family: var(--medium-wide-font);
+      font-size: 1.3rem;
+      font-weight: 100;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
 
       @include breakpoint(sm-tablet) {
         font-size: 1.5rem;
