--- a/app/scss/sections/_turnkey.scss
+++ b/app/scss/sections/_turnkey.scss
@@ -125,8 +125,8 @@
       letter-spacing: 0.5px;
 
       @include breakpoint(sm-tablet) {
-        font-size: 1.5rem;
-        letter-spacing: 0px;
+        font-size: 1rem;
+        line-height: 1.2;
       }
     }
 
