--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -22,6 +22,10 @@ h1 {
   @include breakpoint(md-mobile) {
     font-size: 2.5rem;
   }
+
+  @include breakpoint(sm-mobile) {
+    font-size: 2rem;
+  }
 }
 
 h2 {
