--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -54,6 +54,7 @@
    ============================================== */
 
 .app {
+
   &--blue,
   &--white {
     clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
@@ -155,6 +156,7 @@
 
   &__mockup {
     transform: translateY(200px);
+    border-radius: 10px;
     box-shadow: 0 4px 96px rgba(9, 38, 73, 0.25);
 
     @include breakpoint(lg-tablet) {
