--- a/app/scss/components/_minipod.scss
+++ b/app/scss/components/_minipod.scss
@@ -34,7 +34,7 @@
       left: 50%;
       top: 20%;
       transform: translateX(-50%);
-      background-color: var(--blue-gray-100);
+      background-color: var(--blue-50);
       width: 200px;
       height: 100px;
       border-radius: 100vh;
@@ -109,7 +109,7 @@
         width: 120%;
 
         @include breakpoint(lg-tablet) {
-          width: auto;
+          width: 100%;
         }
       }
     }
