added interaction on scroll-to text

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -8,6 +8,7 @@
 @use "components/buttons";
 @use "components/minipod";
 @use "components/nav";
+@use "components/subnav";
 @use "components/topbar";
 @use "components/footer";
 @use "components/cards";
